fix dark mode not automatically applying

--- a/src/components/header/subcomponents/LoggedUser.module.css
+++ b/src/components/header/subcomponents/LoggedUser.module.css
@@ -32,7 +32,3 @@
 
   font-weight: 500;
 }
-
-.container .lo {
-  font-weight: 500;
-}
